Update GitHub workflow files

--- a/.github/workflows/trigger-symbol-check.yml
+++ b/.github/workflows/trigger-symbol-check.yml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - '**/docs/pictures/**'
+  repository_dispatch:
+    types: [symbol-check-trigger]
   workflow_dispatch:
 
 jobs:
