--- a/.github/workflows/generate_kicad_jobs.yml
+++ b/.github/workflows/generate_kicad_jobs.yml
@@ -396,3 +396,17 @@ jobs:
               "ref": "${{ github.ref }}",
               "sha": "${{ github.sha }}"
             }
+
+      - name: Trigger Symbol Check Workflow
+        if: steps.check-files.outputs.files_generated == 'true'
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.REPO_DISPATCH_TOKEN }}
+          event-type: symbol-check-trigger
+          client-payload: |
+            {
+              "source_repo": "${{ github.repository }}",
+              "project_name": "${{ steps.find-files.outputs.project_name }}",
+              "ref": "${{ github.ref }}",
+              "sha": "${{ github.sha }}"
+            }
