--- a/.github/workflows/trigger-symbol-check.yml
+++ b/.github/workflows/trigger-symbol-check.yml
@@ -1,6 +1,9 @@
 name: Trigger Symbol Generator Check
 
 on:
+  push:
+    paths:
+      - '**/docs/pictures/**'
   repository_dispatch:
     types: [symbol-check-trigger]
   workflow_dispatch:
